String improvements & use SQLite for storage